--- a/vui.html
+++ b/vui.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Playgroud Artyom</title>
+    <title>VUI</title>
     <script src="js/libs/artyom.window.min.js"></script>
     <script src="js/playgroud-artyom-script.js"></script>
 </head>
