--- a/vui.html
+++ b/vui.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>VUI</title>
     <script src="js/libs/artyom.window.min.js"></script>
-    <script src="js/playgroud-artyom-script.js"></script>
+    <script src="js/vui-script.js"></script>
 </head>
 <body>
     <p>This is a playground to test the web-based capabilities for a <b>Voice User Interface</b> with artyom.</p>
