--- a/Task_06/vui.html
+++ b/Task_06/vui.html
@@ -9,6 +9,9 @@
     <script src="js/vui-script.js"></script>
 </head>
 <body>
-    <p>This is a playground to test the web-based capabilities for a <b>Voice User Interface</b> with artyom.</p>
+  <p>These commands are possible:<br>
+    - hello, hey, how are you<br>
+    - create task <b>X</b>, need task <b>X</b>, create the task <b>X</b><br>
+  </p>
 </body>
 </html>
