--- a/Task_06/vui.html
+++ b/Task_06/vui.html
@@ -9,9 +9,9 @@
     <script src="js/vui-script.js"></script>
 </head>
 <body>
-  <p>These commands are possible:<br>
-    - hello, hey, how are you<br>
-    - create task <b>X</b>, need task <b>X</b>, create the task <b>X</b><br>
+  <p>Diese Kommandos sind implementiert:<br>
+    - hallo, hey, guten morgen<br>
+    - erstelle Aufgabe <b>X</b>, brauche Aufgabe <b>X</b>, erstelle die Aufgabe <b>X</b><br>
   </p>
 </body>
 </html>
