--- a/Task_06/vui.html
+++ b/Task_06/vui.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <p>Diese Kommandos sind implementiert:<br>
-    - hallo, hey, guten morgen<br>
-    - erstelle Aufgabe <b>X</b>, brauche Aufgabe <b>X</b>, erstelle die Aufgabe <b>X</b><br>
+    - Füge <b>X</b> dem Kühlschrank hinzu
+    - Entferne <b>X</b> aus dem Kühlschrank
   </p>
 </body>
 </html>
