--- a/Task_06/vui.html
+++ b/Task_06/vui.html
@@ -10,8 +10,11 @@
 </head>
 <body>
   <p>Diese Kommandos sind implementiert:<br>
-    - Füge <b>X</b> dem Kühlschrank hinzu
-    - Entferne <b>X</b> aus dem Kühlschrank
+    - Füge <b>X</b> dem Kühlschrank hinzu.<br>
+    - Entferne <b>X</b> aus dem Kühlschrank.<br>
+    - Was ist im Kühlschrank?<br>
+    - Was habe ich zu trinken?<br>
+    - Was habe ich zu Essen?<br>
   </p>
 </body>
 </html>
