--- a/Task_06/vui.html
+++ b/Task_06/vui.html
@@ -15,6 +15,8 @@
     - Was ist im Kühlschrank?<br>
     - Was habe ich zu trinken?<br>
     - Was habe ich zu Essen?<br>
+    - Erstelle einen neuen Einkaufszettel.<br>
+    - Füge <b>X</b> dem Einkaufszettel hinzu.<br>
   </p>
 </body>
 </html>
