--- a/Task_06/vui.html
+++ b/Task_06/vui.html
@@ -17,6 +17,7 @@
     - Was habe ich zu Essen?<br>
     - Erstelle einen neuen Einkaufszettel.<br>
     - Füge <b>X</b> dem Einkaufszettel hinzu.<br>
+    - Stelle einen Wecker auf <b>X</b> Uhr.<br>
   </p>
 </body>
 </html>
