--- a/Task_06/vui.html
+++ b/Task_06/vui.html
@@ -18,6 +18,8 @@
     - Erstelle einen neuen Einkaufszettel.<br>
     - Füge <b>X</b> dem Einkaufszettel hinzu.<br>
     - Stelle einen Wecker auf <b>X</b> Uhr.<br>
+    <br>
+    <button onclick="startButton()"> Klick hier zum den Kühlschrank zu öffnen.</button><br>
   </p>
 </body>
 </html>
