--- a/Task_06/vui.html
+++ b/Task_06/vui.html
@@ -9,7 +9,11 @@
     <script src="js/vui-script.js"></script>
 </head>
 <body>
-  <p>Diese Kommandos sind implementiert:<br>
+  <p>
+    <br>
+    <button onclick="startButton()"> Klick hier zum den Kühlschrank zu öffnen.</button><br>
+    <br>
+    Diese Kommandos sind implementiert:<br>
     - Füge <b>X</b> dem Kühlschrank hinzu.<br>
     - Entferne <b>X</b> aus dem Kühlschrank.<br>
     - Was ist im Kühlschrank?<br>
@@ -19,7 +23,7 @@
     - Füge <b>X</b> dem Einkaufszettel hinzu.<br>
     - Stelle einen Wecker auf <b>X</b> Uhr.<br>
     <br>
-    <button onclick="startButton()"> Klick hier zum den Kühlschrank zu öffnen.</button><br>
+    <input id="understanded" value="Sag etwas" style="width: 50%"></input><br>
   </p>
 </body>
 </html>
